# oz-pos

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .graphify_chunk_1.txt  .graphify_chunk_2.txt  .graphify_chunk_3.txt  .graphify_chunk_4.txt  .graphify_chunk_5.txt  .graphify_chunk_6.txt  .graphify_chunk_7.txt  .graphify_chunk_8.txt  .graphify_detect.json  .graphify_detect_filtered.json  .graphify_uncached.txt  .lighthouserc.json  .tarpaulin.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMMIT_MSG.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile.server  FOUNDATION_REVIEW.md  JOURNAL.md  LICENSE  README.md  RESTRUCTURING.md  ROADMAP.md  SPRINT.md  TODO.md  TOPOLOGY_AUDIT.md  WHITEPAPER.md  context.md  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.yml  generate-local-api-key.bat  (+8 more)
apps/cloud-server/: Cargo.toml  build.rs
apps/cloud-server/src/: db.rs  email.rs  main.rs  metrics.rs  openapi.rs  prune.rs  rate_limit.rs  redirect.rs  shutdown.rs  sync_api.rs  webhooks.rs
apps/desktop-client/: Cargo.toml  README.md  tauri.conf.json
apps/desktop-client/capabilities/: default.json
apps/desktop-client/src/: error.rs  lan_server.rs  lib.rs  state.rs
apps/desktop-client/tests/: capability_parity.rs  kernel_lifecycle.rs  window_state_multi_monitor.rs  window_visibility.rs  wiring_audit.rs
apps/tablet-client/: AGENTS.md  Cargo.toml  build-android-frontend.bat  build.rs  tauri.conf.json
apps/tablet-client/capabilities/: default.json  mobile.json
apps/tablet-client/icons/: icon.icns
apps/tablet-client/src/: error.rs  lib.rs  main.rs  state.rs
crates/oz-api/: Cargo.toml  README.md
crates/oz-api/src/: auth.rs  lib.rs
crates/oz-cli/: Cargo.toml  README.md
crates/oz-cli/src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs
crates/oz-core/: Cargo.toml  README.md  oz-license.key.pub
crates/oz-core/benches/: barcode_lookup.rs  cart_bench.rs  money_bench.rs  transaction_commit.rs
crates/oz-core/migrations/: 001_sales.sql  002_products.sql  003_barcode.sql  004_sale_status.sql  005_line_count_check.sql  006_currencies.sql  007_customers.sql  008_payments.sql  009_tax_rates.sql  010_audit_log.sql  011_discounts.sql  012_product_taxes.sql  013_held_carts.sql  014_user_id_on_sales.sql  015_product_variants.sql  016_terminals.sql  017_tax_inclusive_category.sql  018_offline_queue.sql  019_refunds.sql  020_tax_on_sales.sql  021_shifts.sql  022_payments_table.sql  023_cash_payouts.sql  024_audit_log_triggers.sql  025_store_profiles.sql  027_payment_gateway_fields.sql  028_terminal_feature_overrides.sql  029_promotions.sql  030_product_bundles.sql  031_loyalty.sql  032_kds_orders.sql  033_tables.sql  034_active_carts.sql  035_workspaces.sql  036_open_bills.sql  037_active_carts.sql  038_user_preferences.sql  039_category_icon.sql  040_user_workspaces.sql  041_credit_reminders.sql  (+58 more)
crates/oz-core/proptest-regressions/: features.txt
crates/oz-core/src/: audit.rs  auth.rs  cache.rs  cart.rs  cash_payout.rs  category.rs  config_validator.rs  crypto.rs  customer.rs  db.rs  error.rs  events.rs  exchange_rate.rs  features.rs  gift_card.rs  inventory.rs  inventory_transaction.rs  kds.rs  lib.rs  license_verification.rs  location_resolver.rs  loyalty.rs  migrations.rs  money.rs  offline.rs  ozpkg.rs  payment.rs  product.rs  product_bundle.rs  product_variant.rs  promotion.rs  purchase_order.rs  rate_limiter.rs  recipe.rs  refund.rs  sale.rs  sale_deduction.rs  session.rs  settings.rs  shift.rs  (+14 more)
crates/oz-core/tests/: audit_integration.rs  backup_restore_integration.rs  corruption_recovery_integration.rs  currency_integration.rs  customer_integration.rs  feature_matrix_tests.rs  gift_card_integration.rs  inventory_integration.rs  loyalty_integration.rs  manifest_schema_test.rs  offline_integration.rs  payment_failure_integration.rs  purchase_order_integration.rs  refund_tax_integration.rs  settings_integration.rs  shift_integration.rs  staff_integration.rs  stock_count_integration.rs  stock_transfer_integration.rs  supplier_integration.rs  terminal_integration.rs
crates/oz-hal/: Cargo.toml  README.md
crates/oz-hal/examples/: custom_barcode_scanner.rs
crates/oz-hal/src/: error.rs  lib.rs  registry.rs  types.rs
crates/oz-hal/tests/: mock_integration.rs  tcp_reconnect.rs
crates/oz-logging/: Cargo.toml  README.md
crates/oz-logging/src/: error.rs  eventlog.rs  lib.rs  syslog.rs  visitor.rs
crates/oz-lua/: Cargo.toml  README.md
crates/oz-lua/src/: bridge.rs  error.rs  lib.rs
crates/oz-notification/: Cargo.toml
crates/oz-notification/src/: handlers.rs  lib.rs  mock.rs  whatsapp.rs
crates/oz-payment/: Cargo.toml  README.md
crates/oz-payment/src/: error.rs  lib.rs  processor.rs  types.rs
crates/oz-payment/tests/: fixtures.rs  mock_integration.rs  qris_integration.rs  recorded_fixture_tests.rs  square_integration.rs  stripe_integration.rs  (+2 more)
crates/oz-plugin/: Cargo.toml
crates/oz-reporting/: Cargo.toml  README.md
crates/oz-security/: Cargo.toml  README.md
docs/: ROADMAP.md  (+24 more)
foundation/: Cargo.toml
foundation/src/: barcode.rs  cart.rs  constants.rs  contact.rs  contracts.rs  dto.rs  enums.rs  errors.rs  events.rs  lib.rs  money.rs  percentage.rs  sku.rs  validation.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cart_deser.rs  lua_parse.rs  money_parse.rs  sku_parse.rs
modules/crm/: Cargo.toml  README.md  manifest.json
modules/currency/: Cargo.toml  README.md  manifest.json
modules/inventory/: Cargo.toml  README.md  manifest.json
modules/loyalty/: Cargo.toml  README.md  manifest.json
modules/reporting/: Cargo.toml  README.md  manifest.json
modules/sales/: Cargo.toml  README.md  manifest.json
modules/settings/: Cargo.toml  README.md  manifest.json
modules/staff/: Cargo.toml  README.md  manifest.json
modules/tax/: Cargo.toml  README.md  manifest.json
modules/terminal/: Cargo.toml  README.md  manifest.json
platform/core/: Cargo.toml
platform/kernel/: Cargo.toml
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
(+1797 files in other folders)
