[workspace]
resolver = "2"
members = [
    "crates/oz-api",
    "crates/oz-core",
    "crates/oz-hal",
    "crates/oz-lua",
    "crates/oz-plugin",
    "crates/oz-security",
    "crates/oz-payment",
    "crates/oz-reporting",
    "crates/oz-logging",
    "crates/oz-cli",
    "foundation",
    "platform/core",
    "platform/kernel",
    "platform/startup",
    "platform/sync",
    "modules/sales",
    "modules/inventory",
    "modules/crm",
    "modules/tax",
    "modules/settings",
    "modules/staff",
    "modules/reporting",
    "modules/terminal",
    "modules/currency",
    "apps/cloud-server",
    "apps/desktop-client",
    "apps/tablet-client",
]

[workspace.package]
version = "0.0.8"
edition = "2024"
rust-version = "1.88"   # axum/tower-http deps (time 0.3.47+) require ≥ 1.88
license = "SEE LICENSE IN LICENSE"
license-file = "LICENSE"
authors = ["OZ-POS contributors"]
repository = "https://github.com/kardelitaitu/oz-pos"
readme = "README.md"

[workspace.dependencies]
# all crates import from here: oz-core = { workspace = true }
oz-api = { path = "crates/oz-api" }
oz-core = { path = "crates/oz-core" }
oz-hal = { path = "crates/oz-hal" }
oz-lua = { path = "crates/oz-lua" }
oz-plugin = { path = "crates/oz-plugin" }
oz-security = { path = "crates/oz-security" }
oz-payment = { path = "crates/oz-payment" }
oz-reporting = { path = "crates/oz-reporting" }
oz-logging = { path = "crates/oz-logging" }
oz-cli = { path = "crates/oz-cli" }
foundation = { path = "foundation" }
platform-core = { path = "platform/core" }
platform-kernel = { path = "platform/kernel" }
modules-sales = { path = "modules/sales" }
modules-inventory = { path = "modules/inventory" }
modules-crm = { path = "modules/crm" }
modules-tax = { path = "modules/tax" }
modules-settings = { path = "modules/settings" }
modules-staff = { path = "modules/staff" }
modules-reporting = { path = "modules/reporting" }
modules-terminal = { path = "modules/terminal" }
modules-currency = { path = "modules/currency" }
platform-startup = { path = "platform/startup" }
platform-sync = { path = "platform/sync" }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# Ecosystem deps
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "net", "io-util"] }
async-trait = "0.1"
async-channel = "2"
clap = { version = "4", features = ["derive"] }
embedded-hal = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
walkdir = "2"
axum = { version = "0.8", features = ["macros"] }
jsonwebtoken = "9"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
rusb = "0.9"
serialport = "4"
argon2 = { version = "0.5", features = ["std", "rand"] }
aes-gcm = "0.10"
zstd = { version = "0.13", features = ["zstdmt"] }
aead = "0.5"
rand = "0.8"
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json", "blocking", "gzip"] }
rlua = "0.20"
notify = { version = "7", features = [] }

regex = "1"
mdns-sd = "0.10"
zip = "2"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
console-subscriber = "0.4"


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 8
strip = "symbols"
overflow-checks = true

# oz-pos-app (Tauri shell) — optimized for the Tauri binary.
# Cargo only allows opt-level, codegen-units, debug, strip,
# debug-assertions, and overflow-checks in package profiles.
# lto and panic must be set at the workspace level when we're
# closer to release.
[profile.release.package.oz-pos-app]
codegen-units = 1
opt-level = "s"
strip = true

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256
debug = true
overflow-checks = false

# Cryptographic and compression crates optimized for speed in tests and dev mode
[profile.dev.package.argon2]
opt-level = 3

[profile.dev.package.aes-gcm]
opt-level = 3

[profile.dev.package.aead]
opt-level = 3

[profile.dev.package.zstd]
opt-level = 3

# TDD profile: fastest possible compile for tight test loops
[profile.tdd]
inherits = "dev"
debug = false
incremental = true
