[package]
name = "oz-pos-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OZ-POS desktop and mobile shell (Tauri v2). Bridges oz-core + oz-hal to the React/TypeScript front-end."
default-run = "oz-pos-app"

[lib]
name = "oz_pos_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "oz-pos-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
oz-core = { workspace = true }
oz-hal = { workspace = true }
oz-logging = { workspace = true }
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
