[package]
name = "oz-cloud-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Headless OZ-POS cloud sync server — no Tauri, no WebView, no GUI."

[[bin]]
name = "oz-cloud-server"
path = "src/main.rs"

[dependencies]
oz-api = { workspace = true }
oz-core = { workspace = true }
oz-logging = { workspace = true }
platform-sync = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
tower = { version = "0.5", features = ["limit"] }
thiserror = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }
prometheus = "0.13"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
