[package]
name = "oz-pos-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OZ-POS desktop and mobile shell (Tauri v2). Bridges oz-core + oz-hal to the React/TypeScript front-end."
default-run = "oz-pos-app"

[lib]
name = "oz_pos_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "oz-pos-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }

[dependencies]
foundation = { workspace = true }
oz-core = { workspace = true }
oz-hal = { workspace = true }
oz-logging = { workspace = true }
oz-lua = { workspace = true }
oz-plugin = { workspace = true }
modules-crm = { workspace = true }
modules-inventory = { workspace = true }
modules-settings = { workspace = true }
modules-tax = { workspace = true }
modules-sales = { workspace = true }
modules-staff = { workspace = true }
modules-reporting = { workspace = true }
modules-terminal = { workspace = true }
modules-currency = { workspace = true }
oz-reporting = { workspace = true }
platform-kernel = { workspace = true }
platform-startup = { workspace = true }
platform-sync = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-updater = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
uuid = { workspace = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# Release profile is at the workspace root (Cargo.toml).
# oz-pos-app-specific overrides live there under
# [profile.release.package.oz-pos-app].
# Per-package [profile.*] sections outside the workspace root
# are ignored and produce warnings.
