[package]
name = "oz-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Domain types for OZ-POS: money, currency, cart, sale, inventory."

[dependencies]
foundation = { workspace = true }
platform-core = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
zstd = { workspace = true }
aead = { workspace = true }
rand = { workspace = true }
hex = "0.4"
serde_json = { workspace = true }

[features]
default = ["sync-http"]
sync-http = ["reqwest"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1"
