[package]
name = "oz-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Domain types for OZ-POS: money, currency, cart, sale, inventory."

[dependencies]
foundation = { workspace = true }
platform-core = { workspace = true }
modules-sales = { workspace = true }
modules-inventory = { workspace = true }
serde = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
zstd = { workspace = true }
aead = { workspace = true }
rand = { workspace = true }
hex = "0.4"
serde_json = { workspace = true }
rsa = { version = "0.9", features = ["pem", "sha2"] }
base64 = "0.22"
sha2 = "0.10"
redis = { version = "0.27", optional = true }
mdns-sd = { workspace = true, optional = true }

[features]
default = ["sync-http"]
sync-http = ["reqwest"]
cache-redis = ["dep:redis"]
lan-mdns = ["dep:mdns-sd"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1"
serial_test = "3"

[[bench]]
name = "barcode_lookup"
harness = false

[[bench]]
name = "cart_bench"
harness = false

[[bench]]
name = "money_bench"
harness = false

[[bench]]
name = "transaction_commit"
harness = false
