[package]
name = "oz-hal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hardware Abstraction Layer for OZ-POS: barcode, printer, NFC, payment terminal, cash drawer."

[dependencies]
oz-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
rusb = { workspace = true }
serialport = { workspace = true }
