[package]
name = "oz-logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Structured logging facade for OZ-POS — context-tagged log records, file + stdout output, log rotation, syslog, Event Log."

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "registry", "env-filter"] }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_EventLog", "Win32_System_Diagnostics_Debug"] }
