[package]
name = "oz-lua"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
oz-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
mlua = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
