[package]
name = "oz-payment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Payment processor abstraction for OZ-POS — Stripe, Square, EMV terminals behind a single trait."

[dependencies]
oz-core = { workspace = true }
oz-hal = { workspace = true }
foundation = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"
reqwest = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = "0.6.5"
once_cell = "1.19"
tokio = { workspace = true, features = ["test-util"] }
