[package]
name = "oz-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Plugin discovery, loading, and sandboxing for OZ-POS."

[dependencies]
chrono = { workspace = true }
oz-core = { workspace = true }
oz-lua = { workspace = true }
serde_json = { workspace = true }
rlua = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = "3"
