[package]
name = "oz-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Encryption, secrets, and PCI-DSS helpers for OZ-POS — at-rest encryption, key rotation, secure memory."

[dependencies]
oz-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
