[package]
name = "oz-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Encryption, secrets, and PCI-DSS helpers for OZ-POS — at-rest encryption, key rotation, secure memory."

[dependencies]
oz-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
hex = "0.4"
chrono = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Credentials", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { workspace = true }
