[package]
name = "modules-crm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OZ-POS CRM Module: customer management, loyalty tracking, purchase history."

[dependencies]
foundation = { workspace = true }
oz-core = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
platform-kernel = { workspace = true }
