[package]
name = "modules-settings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OZ-POS Settings Module: store configuration, feature flags, receipt formatting, sync setup."

[dependencies]
foundation = { workspace = true }
oz-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
platform-kernel = { workspace = true }
