[package]
name = "modules-staff"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OZ-POS Staff Module: user management, role management, authentication, and session handling."

[dependencies]
anyhow = { workspace = true }
foundation = { workspace = true }
platform-core = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
platform-kernel = { workspace = true }
oz-core = { workspace = true }
