[package]
name = "modules-terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OZ-POS Terminal Module: registered POS device management, heartbeat tracking."

[dependencies]
foundation = { workspace = true }
oz-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
platform-kernel = { workspace = true }
